--- a/templates/base.html
+++ b/templates/base.html
@@ -9,3 +9,4 @@
 </div>
 <script src="{% static 'bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
+{% include 'footer.html' %}
