--- a/templates/categories_list.html
+++ b/templates/categories_list.html
@@ -1,29 +1,32 @@
 {% extends 'dashboard.html' %}
 {% block drugi %}
-    <div class="card" style="background-color: #D8E1FF;">
-        <table class="table-responsive">
+    <div class="card" style="background-color: #D6F8D6;">
+        <div class="card-body">
+            <p class="card-title"><a class="nav-link" style="text-align: center" href="{% url 'add_category' %}"><b>Dodaj
+                nową kategorię</b></p></a>
+        </div>
+    </div>
+    <div class="card">
+        <table class="table">
 
             <tr>
-                <th>Lp</th>
-                <th>Kategoria nadrzędna</th>
-                <th>Kategoria własna</th>
+                <th scope="col">#</th>
+                <th scope="col">Kategoria nadrzędna</th>
+                <th scope="col">Kategoria własna</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
             </tr>
             {% for category in object_list %}
                 <tr>
-                    <td>{{ forloop.counter }}</td>
+                    <th scope="row">{{ forloop.counter }}</th>
                     <td>{{ category.parent }}</td>
                     <td>{{ category.name }}</td>
                     <td><a href="{{ category.get_absolute_url }}">edytuj</a></td>
-                    <td><a href="{% url 'delete_category' category.id%}">usuń</a></td>
+                    <td><a href="{% url 'delete_category' category.id %}">usuń</a></td>
                 </tr>
             {% endfor %}
         </table>
-        <div class="card" style="background-color: #D8E1FF;">
-            <div class="card-body">
-                <p class="card-title"><a class="nav-link" style="text-align: center" href="{% url 'add_category' %}">Dodaj
-                    nową kategorię</p></a>
-            </div>
-        </div>
+
     </div>
 
 
