--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-<form method="post" class="form-control" style="background-color: #D8E1FF;">
+<form method="post" class="form-control" style="background-color: #D6F8D6;" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit">
