--- a/templates/links.html
+++ b/templates/links.html
@@ -4,17 +4,20 @@
             <a class="nav-link" href="{% url 'index' %}">Strona Główna</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Kategorie</a>
+            <a class="nav-link" href="{% url 'categories' %}">Kategorie</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Dodaj Kategorie</a>
+            <a class="nav-link" href="{% url 'index' %}">Nowości</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Filmy</a>
+            <a class="nav-link" href="{% url 'index' %}">Promocje</a>
         </li>
         <li class="nav-item">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Najlepsze produkty" aria-label="Search">
+            <a class="nav-link" href="{% url 'index' %}">Bestsellery</a>
+        </li>
+        <li class="nav-item">
+            <form class="d-flex" role="search" action="{% url 'show_products' %}">
+                <input class="form-control me-2" type="search" placeholder="Czego szukasz? :)" aria-label="Search">
                 <button class="btn btn-danger" type="submit">Szukaj</button>
             </form>
         </li>
