--- a/templates/sizes_list.html
+++ b/templates/sizes_list.html
@@ -1,25 +1,29 @@
 {% extends 'dashboard.html' %}
 {% block drugi %}
-    <div class="card" style="background-color: #D8E1FF;">
-        <table class="table-responsive">
+    <div class="card" style="background-color: #D6F8D6;">
+        <div class="card-body">
+            <p class="card-title"><a class="nav-link" style="text-align: center" href="{% url 'add_sizes' %}"><b>Dodaj nowy
+                rozmiar</b></p></a>
+        </div>
+    </div>
+    <div class="card" >
+        <table class="table">
 
             <tr>
-                <th>Lp</th>
-                <th>Nazwa koloru</th>
+                <th scope="col">#</th>
+                <th scope="col">Nazwa rozmiaru</th>
+                <th scope="col">Edytuj</th>
+                <th scope="col">Usuń</th>
             </tr>
-            {% for sizes in object_list %}
+            {% for size in object_list %}
                 <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ sizes }}</td>
-                    <td><a href="{{ sizes.get_absolute_url }}">edytuj</a></td>
+                    <th scope="row">{{ forloop.counter }}</th>
+                    <td>{{ size }}</td>
+                    <td><a href="{{ size.get_absolute_url }}">edytuj</a></td>
+                    <td><a href="{% url 'delete_size' size.id %}">usuń</a></td>
                 </tr>
             {% endfor %}
         </table>
-        <div class="card" style="background-color: #D8E1FF;">
-            <div class="card-body">
-                <p class="card-title"><a class="nav-link" style="text-align: center" href="{% url 'add_sizes' %}">Dodaj nowy rozmiar</p></a>
-            </div>
-        </div>
     </div>
 
 
